<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>online_bagger</name>
  <version>0.0.0</version>
  <description>The online bagger is a tool that allows user to store bagged information about important events, after they happen.</description>
  <maintainer email="zhangrenzhongzheng@outlook.com">zhongzheng</maintainer>
  <license>MIL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ftxui</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rosbag2_cpp</depend>
  <depend>mil_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
