<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_alarms</name>
  <version>1.0.0</version>
  <description>The ros_alarms package</description>
  <maintainer email="matthew.langford95@gmail.com">Matt Langford</maintainer>
  <maintainer email="d.soto@ufl.com">David Soto</maintainer>
  <maintainer email="thomas.canro@ufl.com">Thomas Canro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>ros2_alarms_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
