<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigator_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cckreis0507@gmail.com">Carter Kreis</maintainer>
  <license>TODO: License declaration</license>
  <author>Carter Kreis</author>

  <depend>joint_state_publisher_gui</depend>
  <depend>navigator_description</depend>
  <depend>navigator_gazebo</depend>
  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>

  <!-- needed by ros2 launch scripts -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- xacro is invoked at launch-time to expand the URDF -->

  <!-- packages referenced by the launch files -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
