<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>subjugator</name>
  <version>0.0.0</version>
  <description>SubjuGator metapackage</description>
  <license>TODO</license>
  <maintainer email="a@a.com">Dean</maintainer>

  <depend>depth_driver</depend>
  <depend>down_cam</depend>
  <depend>electrical_protocol</depend>
  <depend>front_cam</depend>
  <depend>libwaterlinked</depend>
  <depend>mil_msgs</depend>
  <depend>mil_passive_sonar</depend>
  <depend>mission_planner</depend>
  <depend>nav_channel</depend>
  <depend>new_depth_driver</depend>
  <depend>servo_controller</depend>
  <depend>subjugator_bringup</depend>
  <depend>subjugator_centroids</depend>
  <depend>subjugator_controller</depend>
  <depend>subjugator_description</depend>
  <depend>subjugator_gazebo</depend>
  <depend>subjugator_joy</depend>
  <depend>subjugator_keyboard_control</depend>
  <depend>subjugator_localization</depend>
  <depend>subjugator_mission_planner</depend>
  <depend>subjugator_msgs</depend>
  <depend>subjugator_path_planner</depend>
  <depend>subjugator_sensor_monitoring</depend>
  <depend>subjugator_thruster_manager</depend>
  <depend>subjugator_trajectory_planner</depend>
  <depend>subjugator_vision</depend>
  <depend>subjugator_wrench_tuner</depend>
  <depend>thrust_and_kill_board</depend>
  <depend>vectornav</depend>
  <depend>vectornav_msgs</depend>
  <depend>waterlinked_dvl_driver</depend>
  <depend>yolo_bringup</depend>
  <depend>yolo_msgs</depend>
  <depend>yolo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
