<?xml version="1.0"?>
<package format="3">
  <name>mission_planner</name>
  <version>0.0.1</version>
  <description>Mission planner (C++)</description>
  <maintainer email="c.chavez@ufl.edu">sub9</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
