<?xml version="1.0"?>
<package format="3">
  <name>mission_planner</name>
  <version>0.1.0</version>
  <description>Mission planner (C++) using BehaviorTree.CPP and ROS 2 topics</description>
  <maintainer email="c.chavez@ufl.edu">sub9</maintainer>
  <license>To-Do</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
